; ModuleID = '/home/carl/AnghaBench/streem/src/extr_iter.c_exec_map.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_iter.c_exec_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_data = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"v\00", align 1
@STRM_NG = common dso_local global i32 0, align 4
@strm_filter = common dso_local global i32 0, align 4
@iter_map = common dso_local global i32 0, align 4
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @exec_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_map(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.map_data*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @strm_get_args(i32* %12, i32 %13, i32* %14, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %11)
  %16 = call %struct.map_data* @malloc(i32 4)
  store %struct.map_data* %16, %struct.map_data** %10, align 8
  %17 = load %struct.map_data*, %struct.map_data** %10, align 8
  %18 = icmp ne %struct.map_data* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %4
  %20 = load i32, i32* @STRM_NG, align 4
  store i32 %20, i32* %5, align 4
  br label %33

21:                                               ; preds = %4
  %22 = load i32, i32* %11, align 4
  %23 = load %struct.map_data*, %struct.map_data** %10, align 8
  %24 = getelementptr inbounds %struct.map_data, %struct.map_data* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  %25 = load i32, i32* @strm_filter, align 4
  %26 = load i32, i32* @iter_map, align 4
  %27 = load %struct.map_data*, %struct.map_data** %10, align 8
  %28 = bitcast %struct.map_data* %27 to i8*
  %29 = call i32 @strm_stream_new(i32 %25, i32 %26, i32* null, i8* %28)
  %30 = call i32 @strm_stream_value(i32 %29)
  %31 = load i32*, i32** %9, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i32, i32* @STRM_OK, align 4
  store i32 %32, i32* %5, align 4
  br label %33

33:                                               ; preds = %21, %19
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @strm_get_args(i32*, i32, i32*, i8*, i32*) #1

declare dso_local %struct.map_data* @malloc(i32) #1

declare dso_local i32 @strm_stream_value(i32) #1

declare dso_local i32 @strm_stream_new(i32, i32, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
